@@ -45,6 +45,7 @@
     * Re-enabled support for gtg:// URI
     * Fix for bug #1026400: script_pocketmod doesn't have execute permission
     * Fix for bug #1027817: Export plugin: changing output format moves widgets up and down
+    * Save backups into backup/ folder, creates backups of tags.xml closes #993920
 
 2012-02-13 Getting Things GNOME! 0.2.9
     * Big refractorization of code, now using liblarch
